frontend/main.css
/* ... */
.logo .row {
    display: block;
    margin: 0 0 5px 0;
}
.logo .row:last-child {
    margin-bottom: 0;
}
.logo .cell {
    display: inline-block;
    width: 15px;
    height: 15px;
    margin: 0 3px 0 0;
}
.logo .row:nth-child(1) .cell:nth-child(1) {
    animation: pulse 47s infinite;
    animation-delay: -1.5s;
}
.logo .row:nth-child(1) .cell:nth-child(2) {
    animation: pulse 32s infinite;
    animation-delay: -0.5s;
}
.logo .row:nth-child(1) .cell:nth-child(3) {
    animation: pulse 49s infinite;
    animation-delay: -6s;
}
.logo .row:nth-child(1) .cell:nth-child(4) {
    animation: pulse 35s infinite;
    animation-delay: -10s;
}
.logo .row:nth-child(2) .cell:nth-child(1) {
    animation: pulse 34s infinite;
    animation-delay: -7.2s;
}
.logo .row:nth-child(2) .cell:nth-child(2) {
    animation: pulse 58s infinite;
    animation-delay: -15s;
}
.logo .row:nth-child(2) .cell:nth-child(3) {
    animation: pulse 31s infinite;
    animation-delay: -5s;
}
.logo .row:nth-child(2) .cell:nth-child(4) {
    animation: pulse 46s infinite;
    animation-delay: -4.5s;
}
.logo .row:nth-child(3) .cell:nth-child(1) {
    animation: pulse 32s infinite;
    animation-delay: -3.5s;
}
.logo .row:nth-child(3) .cell:nth-child(2) {
    animation: pulse 49s infinite;
    animation-delay: -8.5s;
}
.logo .row:nth-child(3) .cell:nth-child(3) {
    animation: pulse 35s infinite;
    animation-delay: -4s;
}
.logo .row:nth-child(3) .cell:nth-child(4) {
    animation: pulse 34s infinite;
    animation-delay: -17s;
}

@keyframes pulse {
    0%, 100% {
        background-color: #ffad00;
    }
    8% {
        background-color: #ffad00;
    }
    10% {
        background-color: #72b2fe;
    }
    16% {
        background-color: #72b2fe;
    }
    18% {
        background-color: #5ec233;
    }
    24% {
        background-color: #5ec233;
    }
    26% {
        background-color: #e96762;
    }
    32% {
        background-color: #e96762;
    }
    34% {
        background-color: #e099c1;
    }
    40% {
        background-color: #e099c1;
    }
    42% {
        background-color: #7d6f94;
    }
    48% {
        background-color: #7d6f94;
    }
    50% {
        background-color: #eb7905;
    }
    56% {
        background-color: #eb7905;
    }
    58% {
        background-color: #72b889;
    }
    64% {
        background-color: #72b889;
    }
    66% {
        background-color: #f0d106;
    }
    72% {
        background-color: #f0d106;
    }
    74% {
        background-color: #a6a6a7;
    }
    80% {
        background-color: #a6a6a7;
    }
    82% {
        background-color: #918e6e;
    }
    88% {
        background-color: #918e6e;
    }
    90% {
        background-color: #ffad00;
    }
}

/**
 * Text content
 */
figure img {
    max-width: 100%;
}
figure a:hover img,
figure a:focus img,
figure a:active img {
    opacity: 0.8;
}
.icon-pad {
    padding: 0 4em 1em;
    text-align: center;
}
.icon-pad svg {
    max-width: 10em;
    display: inline-block;
}

p a,
small a {
    color: #52a5f8;
    border-bottom: 1px solid #52a5f8;
}
p a:hover,
small a:hover,
p a:focus,
small a:focus,
p a:active,
small a:active {
    color: #006fdf;
    border-bottom-color: #006fdf;
    text-decoration: none;
}
p a.btn:hover,
p a.btn:focus,
p a.btn:active {
    color: #fff;
}
.text-muted {
    color: #878d96 !important;
}


h1, h2, h3, h4 {
    font-weight: normal;
}
.h1 {
    font-size: 2em;
    margin-bottom: 0.5em;
}
.h2 {
    font-size: 1.5em;
    margin: 0.25em 0 0.5em;
}
p, li, dd {
    line-height: 1.3;
}
dd {
    margin: 0 0 1.5em;
}
small {
    font-size: 0.75em;
}
.text-muted {
    color: #878d96 !important;
}
.border-image {
    border: 1px solid #000;
}

/**
 * View/edit, maps legend
 */
.maps-list {
    list-style: none;
    padding-left: 17px;
}
.bullet-prefix {
    position: relative;
    padding: 0rem 0.5rem 0.5rem 1.5rem;
    cursor: pointer;
}
.bullet-prefix::before {
    display: block;
    position: absolute;
    left: 0px;
    top: 6px;
    width: 10px;
    height: 10px;
    background-color: #7d7d7d;
    content: ' ';
    transition: background-color 0.2s;
}
.bullet-prefix:hover::before,
.bullet-prefix.toggled-on::before {
    background-color: #222;
}
.data-section .h3 {
    margin: 0;
}
.data-list {
    margin: 0rem 0 1rem;
    padding-left: 1.5rem;
}
.data-list a {
    color: #555;
}
.data-list a:focus,
.data-list a:active,
.data-list a:hover {
    color: #222;
}
.data-list dt,
.data-section label {
    margin: 0;
    font-size: 0.8333rem;
    font-weight: normal;
    text-transform: uppercase;
    color: #555;
}
.data-list dd,
.data-list input {
    margin: 0 0 0.5rem;
    line-height: 1.5;
}
.data-list .no-data {
    color: #999;
}
.data-legend {
    list-style: none;
    padding: 0;
}
.data-legend .key {
    display: inline-block;
    width: 10px;
    height: 10px;
    overflow: hidden;
}

/**
 * Forms
 */
input[type="text"],
input[type="number"],
input[type="email"] {
    border-color: #999;
    padding: 0.25rem 0.5rem;
    border-radius: 0;
}
input[type="number"] {
    padding-right: 0.25rem;
}
.form-check {
    padding-left: 0;
}
label {
    margin: 0.5em 0 0;
}
.buttons-container {
    margin-bottom: 0.75rem;
}
form .btn {
    margin-top: 1em;
}
.buttons-container.btn-center {
    text-align: center;
}
@media (min-width: 768px) {
    .btn.btn-half {
        width: 49%;
        margin-left: 0;
        margin-right: 2%;
    }
    .btn.btn-half:nth-child(2n) {
        margin-right: 0;
    }
}
/**
 * Colours
 */
 .white {
    background-color: #fff;
}
.bold-yellow {
    background-color: #ffad00;
}
.bright-yellow {
    background-color: #f0d106;
}
.pale-yellow {
    background-color: #fff021;
}
.bold-orange {
    background-color: #eb7905;
}
.pale-orange {
    background-color: #ffc04e;
}
.red {
    background-color: #e96762;
}
.pastel-pink {
    background-color: #e099c1;
}
.pale-pink {
    background-color: #ffcde5;
}
.pastel-purple {
    background-color: #7d6f94;
}
/* ... */

